--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "0_progetto",
   "version": "1.0.0",
-  "description": "descrizione progetto",
-  "main": "reverseLongLat_toName.js",
+  "description": "geolocation attempt",
+  "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
