--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "geolocation attempt",
   "main": "index.js",
   "engines": {
-    "node": "14.x"
+    "node": "16.x"
   },
   "scripts": {
     "start": "node index.js",
+    "dev": "npx nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "geoip-lite": "^1.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
