--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "0_progetto",
+  "name": "pwb-projext",
   "version": "1.0.0",
-  "description": "geolocation attempt",
+  "description": "meteo+immages",
   "main": "index.js",
   "engines": {
     "node": "16.x"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "npx nodemon index.js",
+	"start": "node index.js",
+	"dev": "npx nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "geoip-lite": "^1.4.5"
+    "google-images": "^2.1.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
