--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,9 @@
         {
             "src": "/(.*)",
             "dest": "/"
-        }
+        },
+        {
+            "src": "/public/(.*)",
+            "dest": "/public"
     ]
 }
